--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-toggle-dark-mode": "^1.1.1",
     "react-tooltip": "^5.21.5",
     "react-use-query-param-string": "^2.0.10",
+    "sharp": "^0.32.6",
     "sib-api-v3-sdk": "^8.5.0",
     "styled-components": "^6.1.0",
     "styled-normalize": "^8.1.0",
