--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "use-local-storage": "^3.0.0",
     "use-query-params": "^2.2.1",
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@playwright/test": "^1.39.0",
@@ -81,6 +82,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
     "@trivago/prettier-plugin-sort-imports": "^4.2.1",
+    "@types/jest": "^29.5.7",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "babel-plugin-tailwind-components": "^0.5.10",
@@ -99,6 +101,7 @@
     "nock": "^13.3.7",
     "prettier": "^3.0.3",
     "prisma": "^5.5.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "lint-staged": {
