--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "testu": "NODE_ENV=test jest ./testu",
     "jest:local": "NODE_ENV=test jest --watch",
     "testu:local": "NODE_ENV=test jest --watch ./testu",
-    "testc:local": "NODE_ENV=test jest --watch ./testc",
+    "testc:local": "DEBUG_PRINT_LIMIT=10000 NODE_ENV=test jest --watch ./testc",
     "teste:local": "NODE_ENV=test playwright test --ui",
     "dev": "next dev",
     "build": "yarn iframe && next build",
@@ -72,22 +72,23 @@
     "webpack-cli": "^5.0.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.33.0",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
-    "eslint-plugin-jest": "^27.4.2",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "@playwright/test": "^1.33.0",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "babel-plugin-tailwind-components": "^0.5.10",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-better-styled-components": "^1.1.2",
+    "eslint-plugin-jest": "^27.4.2",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-styled-components-a11y": "^0.1.0",
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^13.1.1",
+    "nock": "^13.3.7",
     "prettier": "2.8.4"
   },
   "lint-staged": {
