--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@playwright/test": "^1.33.0",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "babel-plugin-tailwind-components": "^0.5.10",
     "eslint": "8.33.0",
