--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   "dependencies": {
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
-    "@prisma/client": "5.5.0",
     "@next/bundle-analyzer": "^14.0.1",
+    "@prisma/client": "5.5.0",
     "@sentry/nextjs": "^7.75.1",
     "@socialgouv/matomo-next": "^1.8.0",
     "@tanstack/react-query": "^5.0.5",
@@ -48,6 +48,7 @@
     "next": "^13.5.6",
     "next-query-params": "^4.2.3",
     "next-sitemap": "^4.2.3",
+    "preact": "^10.18.2",
     "publicodes": "1.0.0-beta.77",
     "publicodes-react": "1.0.0-beta.77",
     "puppeteer-core": "^21.4.1",
