--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "iframe": "dotenv -e .env.local webpack",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "engines": {
     "node": "20",
@@ -77,6 +79,16 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.39.0",
+    "@storybook/addon-a11y": "^7.5.2",
+    "@storybook/addon-essentials": "^7.5.2",
+    "@storybook/addon-interactions": "^7.5.2",
+    "@storybook/addon-links": "^7.5.2",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/addon-themes": "^7.5.2",
+    "@storybook/blocks": "^7.5.2",
+    "@storybook/nextjs": "^7.5.2",
+    "@storybook/react": "^7.5.2",
+    "@storybook/testing-library": "^0.2.2",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
@@ -92,6 +104,7 @@
     "eslint-plugin-jest": "^27.4.3",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-storybook": "^0.6.15",
     "eslint-plugin-styled-components-a11y": "^2.1.31",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
@@ -100,6 +113,7 @@
     "nock": "^13.3.7",
     "prettier": "^3.0.3",
     "prisma": "^5.5.0",
+    "storybook": "^7.5.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
