--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.0.2",
+    "next-router-mock": "^0.9.10",
     "nock": "^13.3.7",
     "prettier": "^3.0.3",
     "prisma": "^5.5.0",
