--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "@types/react-slick": "^0.23.12",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
+    "axios-mock-adapter": "^1.22.0",
     "babel-plugin-tailwind-components": "^0.5.10",
     "eslint": "8.52.0",
     "eslint-config-next": "13.5.6",
@@ -115,6 +116,7 @@
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-mock-axios": "^4.7.3",
     "lint-staged": "^15.0.2",
     "next-router-mock": "^0.9.10",
     "next-test-api-route-handler": "^3.1.10",
