--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   "dependencies": {
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
+    "@incubateur-ademe/publicodes-impact-livraison": "^0.2.1",
+    "@incubateur-ademe/publicodes-negaoctet": "^1.0.1",
     "@next/bundle-analyzer": "^14.0.1",
     "@prisma/client": "5.5.0",
     "@sentry/nextjs": "^7.75.1",
@@ -54,8 +56,6 @@
     "preact": "^10.18.2",
     "publicodes": "1.0.0-beta.77",
     "publicodes-react": "1.0.0-beta.77",
-    "@incubateur-ademe/publicodes-impact-livraison": "^0.2.1",
-    "@incubateur-ademe/publicodes-negaoctet": "^1.0.1",
     "puppeteer-core": "^21.4.1",
     "react": "18.2.0",
     "react-countup": "^6.4.2",
@@ -97,6 +97,7 @@
     "@testing-library/user-event": "^14.5.1",
     "@trivago/prettier-plugin-sort-imports": "^4.2.1",
     "@types/jest": "^29.5.7",
+    "@types/react-slick": "^0.23.12",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "babel-plugin-tailwind-components": "^0.5.10",
