--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@socialgouv/matomo-next": "^1.8.0",
     "@tanstack/react-query": "^5.0.5",
     "axios": "^1.5.1",
+    "babel-plugin-istanbul": "^6.1.1",
     "chrome-aws-lambda": "^10.1.0",
     "copy-to-clipboard": "^3.3.3",
     "dotenv-cli": "^7.3.0",
@@ -55,6 +56,7 @@
     "next": "^13.5.6",
     "next-query-params": "^4.2.3",
     "next-sitemap": "^4.2.3",
+    "nyc": "^15.1.0",
     "preact": "^10.18.2",
     "publicodes": "1.0.0-beta.77",
     "publicodes-react": "1.0.0-beta.77",
@@ -75,6 +77,7 @@
     "sib-api-v3-sdk": "^8.5.0",
     "styled-components": "^6.1.0",
     "styled-normalize": "^8.1.0",
+    "ts-jest": "^29.1.1",
     "twemoji": "^14.0.2",
     "use-local-storage": "^3.0.0",
     "use-query-params": "^2.2.1",
