--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/jest": "^29.5.10",
     "@types/react-slick": "^0.23.12",
+    "@types/react-highlight-words": "^0.16.7",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "babel-plugin-tailwind-components": "^0.5.10",
