--- a/package.json
+++ b/package.json
@@ -98,8 +98,8 @@
     "@testing-library/user-event": "^14.5.1",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/jest": "^29.5.10",
-    "@types/react-slick": "^0.23.12",
     "@types/react-highlight-words": "^0.16.7",
+    "@types/react-slick": "^0.23.12",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "babel-plugin-tailwind-components": "^0.5.10",
@@ -121,6 +121,7 @@
     "next-test-api-route-handler": "^3.1.10",
     "nock": "^13.3.8",
     "node-mocks-http": "^1.13.0",
+    "nyc": "^15.1.0",
     "prettier": "^3.1.0",
     "prisma": "^5.6.0",
     "storybook": "^7.5.3",
