--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "testc": "NODE_ENV=test jest ./testc",
     "teste": "NODE_ENV=test playwright test --reporter=list",
     "testu": "NODE_ENV=test jest ./testu",
+    "cov:pw" : "NODE_ENV=test COVERAGE=true playwright test",
+    "cov:jest" : "NODE_ENV=test jest --collectCoverage --collectCoverageFrom='./src/**' --collectCoverageFrom='./pages/**' --coverageReporters=json --coverageDirectory='./coverage'",
+    "cov:report" : "nyc report --reporter html --reporter text -t coverage --report-dir coverage/summary",
     "jest:local": "NODE_ENV=test jest --watch",
     "testa:local": "NODE_ENV=test jest --watch ./testa",
     "testc:local": "DEBUG_PRINT_LIMIT=10000 NODE_ENV=test jest --watch ./testc",
