--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "testc": "NODE_ENV=test jest ./testc",
     "teste": "NODE_ENV=test playwright test --reporter=list",
     "testu": "NODE_ENV=test jest ./testu",
+    "cov:clean" : "rm -rf coverage",
     "cov:pw" : "NODE_ENV=test COVERAGE=true playwright test",
     "cov:jest" : "NODE_ENV=test jest --collectCoverage --collectCoverageFrom='./src/**' --collectCoverageFrom='./pages/**' --coverageReporters=json --coverageDirectory='./coverage'",
     "cov:report" : "nyc report --reporter html --reporter text -t coverage --report-dir coverage/summary",
