--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "testc": "NODE_ENV=test jest ./testc",
     "teste": "NODE_ENV=test playwright test --reporter=list",
     "testu": "NODE_ENV=test jest ./testu",
+    "cov:clean" : "rm -rf coverage",
+    "cov:pw" : "NODE_ENV=test COVERAGE=true playwright test",
+    "cov:jest" : "NODE_ENV=test jest --collectCoverage --collectCoverageFrom='./src/**' --collectCoverageFrom='./pages/**' --coverageReporters=json --coverageDirectory='./coverage'",
+    "cov:report" : "nyc report --reporter html --reporter text -t coverage --report-dir coverage/summary",
+    "cov:show" : "open coverage/summary/index.html",
+    "cov:full" : "yarn cov:clean && yarn cov:pw && yarn cov:jest && yarn cov:report && yarn cov:show",
     "jest:local": "NODE_ENV=test jest --watch",
     "testa:local": "NODE_ENV=test jest --watch ./testa",
     "testc:local": "DEBUG_PRINT_LIMIT=10000 NODE_ENV=test jest --watch ./testc",
@@ -98,8 +104,8 @@
     "@testing-library/user-event": "^14.5.1",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/jest": "^29.5.10",
-    "@types/react-slick": "^0.23.12",
     "@types/react-highlight-words": "^0.16.7",
+    "@types/react-slick": "^0.23.12",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "babel-plugin-tailwind-components": "^0.5.10",
@@ -121,6 +127,7 @@
     "next-test-api-route-handler": "^3.1.10",
     "nock": "^13.3.8",
     "node-mocks-http": "^1.13.0",
+    "nyc": "^15.1.0",
     "prettier": "^3.1.0",
     "prisma": "^5.6.0",
     "storybook": "^7.5.3",
