--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -9,6 +9,7 @@
   "trailingComma": "es5",
   "bracketSpacing": true,
   "jsxBracketSameLine": true,
+  "bracketSameLine": true,
   "arrowParens": "always",
   "endOfLine": "lf",
   "importOrder": [
