--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -46,9 +46,30 @@ jobs:
         run: yarn playwright install --with-deps chromium
       - name: E2E test  => with Playwright
         run: yarn teste
-      - uses: actions/upload-artifact@v3
+      - run: mkdir -p ${{ github.workspace }}/tmp/artifacts
+      - name: Lighthouse Check
+        uses: foo-software/lighthouse-check-action@master
+        id: lighthouseCheck
+        with:
+          device: all
+          urls: 'http://localhost:3000,http://localhost:3000/comparateur,http://localhost:3000/integration,http://localhost:3000/usagenumerique,http://localhost:3000/livraison,http://localhost:3000/chauffage,http://localhost:3000/transport,http://localhost:3000/fruitsetlegumes,http://localhost:3000/chauffage/pompeachaleur'
+          outputDirectory: ${{ github.workspace }}/tmp/artifacts
+      - name: Verify Lighthouse Check results
+        uses: foo-software/lighthouse-check-status-action@master
+        with:
+          lighthouseCheckResults: ${{ steps.lighthouseCheck.outputs.lighthouseCheckResults }}
+          minAccessibilityScore: "83"
+          minBestPracticesScore: "92"
+      - name: Upload playwright artifacts
+        uses: actions/upload-artifact@v3
         if: always()
         with:
           name: playwright-report
           path: test-results/
           retention-days: 30
+      - name: Upload Lighthouse artifacts
+        uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: Lighthouse reports
+          path: ${{ github.workspace }}/tmp/artifacts
