--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "next": "^14.0.4",
     "next-query-params": "^5.0.0",
     "next-sitemap": "^4.2.3",
+    "notion-client": "^6.16.0",
     "publicodes": "1.0.0-beta.77",
     "publicodes-react": "1.0.0-beta.77",
     "puppeteer-core": "^21.6.1",
@@ -69,6 +70,7 @@
     "react-dom": "18.2.0",
     "react-flip-toolkit": "^7.1.0",
     "react-highlight-words": "^0.20.0",
+    "react-notion-x": "^6.16.0",
     "react-range": "^1.8.14",
     "react-responsive-carousel": "^3.2.23",
     "react-share": "^5.0.3",
