--- a/package.json
+++ b/package.json
@@ -40,41 +40,41 @@
     "yarn": "1.22"
   },
   "dependencies": {
-    "@iframe-resizer/child": "^5.3.1",
-    "@iframe-resizer/parent": "^5.3.1",
+    "@iframe-resizer/child": "^5.3.2",
+    "@iframe-resizer/parent": "^5.3.2",
     "@incubateur-ademe/publicodes-acv-numerique": "^1.2.0",
     "@incubateur-ademe/publicodes-impact-livraison": "^0.3.1",
-    "@next/bundle-analyzer": "^14.2.13",
-    "@prisma/client": "^5.19.1",
-    "@publicodes/react-ui": "1.5.4",
+    "@next/bundle-analyzer": "^15.0.2",
+    "@prisma/client": "^5.21.1",
+    "@publicodes/react-ui": "^1.5.4",
     "@r2wc/react-to-web-component": "^2.0.3",
-    "@sentry/nextjs": "^8.31.0",
+    "@sentry/nextjs": "^8.36.0",
     "@socialgouv/matomo-next": "^1.9.1",
-    "@tanstack/react-query": "^5.56.2",
-    "@tanstack/react-query-next-experimental": "^5.56.2",
+    "@tanstack/react-query": "^5.59.19",
+    "@tanstack/react-query-next-experimental": "^5.59.19",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "dotenv-cli": "^7.4.2",
     "fuse.js": "^7.0.0",
-    "helmet": "^7.1.0",
+    "helmet": "^8.0.0",
     "html-to-image": "^1.11.11",
     "markdown-to-jsx": "^7.5.0",
     "next": "^14.2.13",
-    "next-intl": "^3.19.4",
+    "next-intl": "^3.24.0",
     "next-query-params": "^5.0.1",
     "next-sitemap": "^4.2.3",
-    "notion-client": "^6.16.0",
+    "notion-client": "^7.0.1",
     "postcss": "^8.4.47",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^16.1.0",
-    "postcss-nested": "^6.2.0",
-    "postcss-preset-env": "^10.0.5",
-    "preact": "^10.24.0",
+    "postcss-nested": "^7.0.2",
+    "postcss-preset-env": "^10.0.9",
+    "preact": "^10.24.3",
     "publicodes": "1.4.0",
     "qrcode": "^1.5.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-notion-x": "^6.16.0",
+    "react-notion-x": "^7.0.1",
     "react-share": "^5.1.0",
     "sharp": "^0.33.5",
     "swagger-jsdoc": "^6.2.8",
@@ -83,67 +83,67 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@babel/cli": "^7.25.6",
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.4",
-    "@babel/preset-react": "^7.24.7",
-    "@babel/preset-typescript": "^7.24.7",
-    "@babel/runtime": "^7.25.6",
-    "@playwright/test": "^1.47.1",
+    "@babel/cli": "^7.25.9",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
+    "@babel/preset-typescript": "^7.26.0",
+    "@babel/runtime": "^7.26.0",
+    "@playwright/test": "^1.48.2",
     "@statoscope/webpack-plugin": "^5.28.2",
-    "@storybook/addon-a11y": "^8.3.2",
-    "@storybook/addon-essentials": "^8.3.2",
-    "@storybook/addon-interactions": "^8.3.2",
-    "@storybook/addon-links": "^8.3.2",
-    "@storybook/blocks": "^8.3.2",
-    "@storybook/nextjs": "^8.3.2",
-    "@storybook/react": "^8.3.2",
+    "@storybook/addon-a11y": "^8.4.2",
+    "@storybook/addon-essentials": "^8.4.2",
+    "@storybook/addon-interactions": "^8.4.2",
+    "@storybook/addon-links": "^8.4.2",
+    "@storybook/blocks": "^8.4.2",
+    "@storybook/nextjs": "^8.4.2",
+    "@storybook/react": "^8.4.2",
     "@storybook/testing-library": "^0.2.2",
-    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "@types/jest": "^29.5.13",
+    "@types/jest": "^29.5.14",
     "@types/node-pdftk": "^2.1.9",
     "@types/qrcode": "^1.5.5",
     "@types/react-highlight-words": "^0.20.0",
     "@types/react-slick": "^0.23.13",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-react": "^4.18.3",
-    "@typescript-eslint/eslint-plugin": "^8.6.0",
-    "@typescript-eslint/parser": "^8.6.0",
+    "@typescript-eslint/eslint-plugin": "^8.13.0",
+    "@typescript-eslint/parser": "^8.13.0",
     "babel-loader": "^9.2.1",
-    "chromatic": "^11.10.2",
+    "chromatic": "^11.16.5",
     "css-loader": "6.11.0",
     "eslint": "8.57.0",
-    "eslint-config-next": "^14.2.13",
+    "eslint-config-next": "^15.0.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^28.8.3",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.36.1",
-    "eslint-plugin-storybook": "^0.8.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-storybook": "^0.11.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.10",
     "next-router-mock": "^0.9.13",
     "next-statoscope": "^1.0.1",
-    "next-test-api-route-handler": "^4.0.11",
+    "next-test-api-route-handler": "^4.0.14",
     "nock": "^13.5.5",
-    "node-mocks-http": "^1.16.0",
+    "node-mocks-http": "^1.16.1",
     "node-pdftk": "^2.1.3",
     "nyc": "^17.1.0",
     "pdf-merger-js": "^5.1.2",
-    "playwright": "^1.47.1",
+    "playwright": "^1.48.2",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.3.3",
-    "prisma": "^5.19.1",
-    "storybook": "^8.3.2",
+    "prisma": "^5.21.1",
+    "storybook": "^8.4.2",
     "storybook-dark-mode": "^4.0.2",
     "style-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.3.10",
-    "typescript": "^5.6.2",
-    "undici": "^6.19.8",
-    "webpack": "^5.94.0",
+    "typescript": "^5.6.3",
+    "undici": "^6.20.1",
+    "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
   },
   "lint-staged": {
