--- a/package.json
+++ b/package.json
@@ -45,23 +45,23 @@
     "@iframe-resizer/parent": "^5.3.2",
     "@incubateur-ademe/publicodes-acv-numerique": "^1.2.0",
     "@incubateur-ademe/publicodes-impact-livraison": "^0.3.1",
-    "@next/bundle-analyzer": "15.0.3",
-    "@prisma/client": "^6.0.0",
+    "@next/bundle-analyzer": "^15.1.1",
+    "@prisma/client": "^6.1.0",
     "@publicodes/react-ui": "^1.5.4",
-    "@r2wc/react-to-web-component": "^2.0.3",
-    "@sentry/nextjs": "^8.41.0",
+    "@r2wc/react-to-web-component": "^2.0.4",
+    "@sentry/nextjs": "^8.47.0",
     "@socialgouv/matomo-next": "^1.9.2",
-    "@tanstack/react-query": "^5.62.0",
-    "@tanstack/react-query-next-experimental": "^5.62.0",
-    "axios": "^1.7.8",
+    "@tanstack/react-query": "^5.62.8",
+    "@tanstack/react-query-next-experimental": "^5.62.8",
+    "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "dotenv-cli": "^7.4.4",
     "fuse.js": "^7.0.0",
     "helmet": "^8.0.0",
     "html-to-image": "^1.11.11",
-    "markdown-to-jsx": "^7.7.0",
-    "next": "15.0.3",
-    "next-intl": "^3.25.3",
+    "markdown-to-jsx": "^7.7.2",
+    "next": "^15.1.1",
+    "next-intl": "^3.26.2",
     "next-query-params": "^5.0.1",
     "next-sitemap": "^4.2.3",
     "notion-client": "^7.1.5",
@@ -69,42 +69,42 @@
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^16.1.0",
     "postcss-nested": "^7.0.2",
-    "postcss-preset-env": "^10.1.1",
-    "preact": "^10.25.1",
+    "postcss-preset-env": "^10.1.2",
+    "preact": "^10.25.2",
     "publicodes": "1.4.0",
     "qrcode": "^1.5.4",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-notion-x": "^7.2.5",
     "react-share": "^5.1.1",
     "sharp": "^0.33.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-react": "^5.18.2",
     "ts-node": "^10.9.2",
-    "zod": "^3.23.8",
+    "zod": "^3.24.1",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.25.9",
+    "@babel/cli": "^7.26.4",
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
-    "@babel/preset-react": "^7.25.9",
+    "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
     "@babel/runtime": "^7.26.0",
-    "@playwright/test": "^1.49.0",
+    "@playwright/test": "^1.49.1",
     "@statoscope/webpack-plugin": "^5.28.3",
-    "@storybook/addon-a11y": "^8.4.6",
-    "@storybook/addon-essentials": "^8.4.6",
-    "@storybook/addon-interactions": "^8.4.6",
-    "@storybook/addon-links": "^8.4.6",
-    "@storybook/blocks": "^8.4.6",
-    "@storybook/nextjs": "^8.4.6",
-    "@storybook/react": "^8.4.6",
+    "@storybook/addon-a11y": "^8.4.7",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-links": "^8.4.7",
+    "@storybook/blocks": "^8.4.7",
+    "@storybook/nextjs": "^8.4.7",
+    "@storybook/react": "^8.4.7",
     "@storybook/testing-library": "^0.2.2",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.0.1",
+    "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
-    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.0",
     "@types/jest": "^29.5.14",
     "@types/node-pdftk": "^2.1.9",
     "@types/qrcode": "^1.5.5",
@@ -112,13 +112,13 @@
     "@types/react-slick": "^0.23.13",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-react": "^4.18.3",
-    "@typescript-eslint/eslint-plugin": "^8.16.0",
-    "@typescript-eslint/parser": "^8.16.0",
+    "@typescript-eslint/eslint-plugin": "^8.18.1",
+    "@typescript-eslint/parser": "^8.18.1",
     "babel-loader": "^9.2.1",
-    "chromatic": "^11.19.0",
-    "css-loader": "6.11.0",
-    "eslint": "^9.16.0",
-    "eslint-config-next": "15.0.3",
+    "chromatic": "^11.20.2",
+    "css-loader": "^7.1.2",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "15.1.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^28.9.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -126,26 +126,26 @@
     "eslint-plugin-storybook": "^0.11.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^15.2.10",
+    "lint-staged": "^15.2.11",
     "next-router-mock": "^0.9.13",
     "next-statoscope": "^1.0.1",
     "next-test-api-route-handler": "^4.0.14",
     "nock": "^13.5.6",
-    "node-mocks-http": "^1.16.1",
+    "node-mocks-http": "^1.16.2",
     "node-pdftk": "^2.1.3",
     "nyc": "^17.1.0",
     "pdf-merger-js": "^5.1.2",
-    "playwright": "^1.49.0",
+    "playwright": "^1.49.1",
     "postcss-loader": "^8.1.1",
-    "prettier": "^3.4.1",
-    "prisma": "^6.0.0",
-    "storybook": "^8.4.6",
+    "prettier": "^3.4.2",
+    "prisma": "^6.1.0",
+    "storybook": "^8.4.7",
     "storybook-dark-mode": "^4.0.2",
     "style-loader": "^4.0.0",
-    "terser-webpack-plugin": "^5.3.10",
+    "terser-webpack-plugin": "^5.3.11",
     "typescript": "^5.7.2",
     "undici": "6.21.0",
-    "webpack": "^5.96.1",
+    "webpack": "^5.97.1",
     "webpack-cli": "^5.1.4"
   },
   "lint-staged": {
@@ -158,8 +158,5 @@
     ]
   },
   "readme": "ERROR: No README data found!",
-  "_id": "impactco2@1.0.0",
-  "resolutions": {
-    "jackspeak": "2.1.1"
-  }
+  "_id": "impactco2@1.0.0"
 }
