--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     "@typescript-eslint/parser": "^8.18.1",
     "babel-loader": "^9.2.1",
     "chromatic": "^11.20.2",
-    "css-loader": "^7.1.2",
+    "css-loader": "6.11.0",
     "eslint": "^9.17.0",
     "eslint-config-next": "15.1.1",
     "eslint-config-prettier": "^9.1.0",
@@ -142,7 +142,6 @@
     "storybook": "^8.4.7",
     "storybook-dark-mode": "^4.0.2",
     "style-loader": "^4.0.0",
-    "terser-webpack-plugin": "^5.3.11",
     "typescript": "^5.7.2",
     "undici": "6.21.0",
     "webpack": "^5.97.1",
