--- a/package.json
+++ b/package.json
@@ -45,27 +45,27 @@
     "@iframe-resizer/parent": "^5.3.2",
     "@incubateur-ademe/publicodes-acv-numerique": "^1.2.0",
     "@incubateur-ademe/publicodes-impact-livraison": "^0.3.1",
-    "@next/bundle-analyzer": "^15.1.3",
-    "@prisma/client": "^6.1.0",
+    "@next/bundle-analyzer": "^15.1.4",
+    "@prisma/client": "^6.2.1",
     "@publicodes/react-ui": "^1.5.4",
     "@r2wc/react-to-web-component": "^2.0.4",
-    "@sentry/nextjs": "^8.47.0",
+    "@sentry/nextjs": "^8.50.0",
     "@socialgouv/matomo-next": "^1.9.2",
-    "@tanstack/react-query": "^5.62.11",
-    "@tanstack/react-query-next-experimental": "^5.62.11",
+    "@tanstack/react-query": "^5.64.1",
+    "@tanstack/react-query-next-experimental": "^5.64.1",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "dotenv-cli": "^8.0.0",
     "fuse.js": "^7.0.0",
     "helmet": "^8.0.0",
     "html-to-image": "^1.11.11",
-    "markdown-to-jsx": "^7.7.2",
-    "next": "^15.1.3",
+    "markdown-to-jsx": "^7.7.3",
+    "next": "^15.1.4",
     "next-intl": "^3.26.3",
-    "next-query-params": "^5.0.1",
+    "next-query-params": "^5.1.0",
     "next-sitemap": "^4.2.3",
-    "notion-client": "^7.1.5",
-    "postcss": "^8.4.49",
+    "notion-client": "^7.1.6",
+    "postcss": "^8.5.1",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^16.1.0",
     "postcss-nested": "^7.0.2",
@@ -75,14 +75,14 @@
     "qrcode": "^1.5.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-notion-x": "^7.2.5",
+    "react-notion-x": "^7.2.6",
     "react-share": "^5.1.2",
     "sharp": "^0.33.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-react": "^5.18.2",
     "ts-node": "^10.9.2",
     "zod": "^3.24.1",
-    "zustand": "^5.0.2"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.26.4",
@@ -94,18 +94,18 @@
     "@babel/runtime": "^7.26.0",
     "@playwright/test": "^1.49.1",
     "@statoscope/webpack-plugin": "^5.28.3",
-    "@storybook/addon-a11y": "^8.4.7",
-    "@storybook/addon-essentials": "^8.4.7",
-    "@storybook/addon-interactions": "^8.4.7",
-    "@storybook/addon-links": "^8.4.7",
-    "@storybook/blocks": "^8.4.7",
-    "@storybook/nextjs": "^8.4.7",
-    "@storybook/react": "^8.4.7",
+    "@storybook/addon-a11y": "^8.5.0",
+    "@storybook/addon-essentials": "^8.5.0",
+    "@storybook/addon-interactions": "^8.5.0",
+    "@storybook/addon-links": "^8.5.0",
+    "@storybook/blocks": "^8.5.0",
+    "@storybook/nextjs": "^8.5.0",
+    "@storybook/react": "^8.5.0",
     "@storybook/testing-library": "^0.2.2",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
-    "@testing-library/user-event": "^14.5.2",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.0",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.0",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.1",
     "@types/jest": "^29.5.14",
     "@types/node-pdftk": "^2.1.9",
     "@types/qrcode": "^1.5.5",
@@ -113,21 +113,21 @@
     "@types/react-slick": "^0.23.13",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-react": "^4.18.3",
-    "@typescript-eslint/eslint-plugin": "^8.18.2",
-    "@typescript-eslint/parser": "^8.18.2",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
     "babel-loader": "^9.2.1",
-    "chromatic": "^11.20.2",
+    "chromatic": "^11.25.0",
     "css-loader": "6.11.0",
-    "eslint": "^9.17.0",
-    "eslint-config-next": "15.1.3",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jest": "^28.10.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.37.3",
-    "eslint-plugin-storybook": "^0.11.1",
+    "eslint": "^9.18.0",
+    "eslint-config-next": "^15.1.4",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-jest": "^28.11.0",
+    "eslint-plugin-prettier": "^5.2.2",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-storybook": "^0.11.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^15.3.0",
+    "lint-staged": "^15.4.1",
     "next-router-mock": "^0.9.13",
     "next-statoscope": "^1.0.1",
     "next-test-api-route-handler": "^4.0.14",
@@ -139,11 +139,11 @@
     "playwright": "^1.49.1",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.4.2",
-    "prisma": "^6.1.0",
-    "storybook": "^8.4.7",
+    "prisma": "^6.2.1",
+    "storybook": "^8.5.0",
     "storybook-dark-mode": "^4.0.2",
     "style-loader": "^4.0.0",
-    "typescript": "^5.7.2",
+    "typescript": "^5.7.3",
     "undici": "6.21.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
