--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "chromatic": "chromatic --exit-zero-on-changes",
-    "testIframes": "npx playwright install chromium; npx ts-node -r dotenv/config src/scripts/testIframes.ts",
-    "prepare": "husky"
+    "testIframes": "npx playwright install chromium; npx ts-node -r dotenv/config src/scripts/testIframes.ts"
   },
   "engines": {
     "node": ">22.0.0",
@@ -127,7 +126,6 @@
     "eslint-plugin-prettier": "^5.2.5",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-storybook": "^0.11.6",
-    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.5.0",
